syntax = "proto3";

package eureka.v1;

option go_package = "github.com/manabie-com/backend/pkg/manabuf/eureka/v1;epb";

message UpsertBooksRequest {
  message Book {
    string name = 1;
    reserved 2 to 6;
    reserved "country", "subject", "grade", "school_id", "chapter_ids";
    string book_id = 7;
  }
  repeated Book books = 1;
}
message UpsertBooksResponse {
  reserved 1;
  reserved "successful";
  repeated string book_ids = 2;
}

service BookModifierService {
  rpc UpsertBooks(UpsertBooksRequest) returns (UpsertBooksResponse); // TODO: refactor upsert book.
}